--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["nextjs", "nprogress", "prevstate", "randomstring", "tlds"]
+  "cSpell.words": [
+    "Ajao",
+    "fatai",
+    "Ikeja",
+    "irawo",
+    "nextjs",
+    "nprogress",
+    "prevstate",
+    "randomstring",
+    "Sholanke",
+    "Surepath",
+    "tlds"
+  ]
 }
