--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "npm": "^8.5.2",
     "nprogress": "^0.2.0",
     "randomstring": "^1.2.1",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "17.0.2",
