--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,16 @@
     "fatai",
     "Ikeja",
     "irawo",
+    "Kehinde",
     "nextjs",
     "nprogress",
+    "Olayisade",
+    "Opemipo",
     "prevstate",
     "randomstring",
     "Sholanke",
     "Surepath",
     "tlds"
-  ]
+  ],
+  "cSpell.ignoreWords": ["tinyurl"]
 }
